--- a/views/index.html
+++ b/views/index.html
@@ -98,13 +98,16 @@
 			</div>
 			<div class="title_bar animation">
 				<div class="title_top">
-					<div class="row">
-						<div class="col-md-10"></div>
-						<div class="col-md-1">
-							
+						<div class="botomtab_menu2">
+							<a href="/deposit" class="R"><div class="single_tab2"><i style="font-size: 32px;" class="ion ion-ios-cloud-upload-outline"></i> <span>Dépos</span> </div></a>
+							<a href="/withdraw" class="R"><div class="single_tab2 "><i style="font-size: 32px;" class="ion ion-ios-cloud-download-outline"></i> <span>Retrait</span> </div></a>
+							<a href="/scanner" class="R"><div class="single_tab2 "><i style="font-size: 32px;" class="ion ion-ios-barcode-outline"></i> <span>Scanner</span></div></a>
+							<a href="/settings" class="R"><div class="single_tab2 "><i style="font-size: 32px;" class="ion ion-ios-cog-outline"></i>Paramètres</div></a>
 						</div>
-						<div class="col-md-10"></div>
-					</div>
+						<hr>
+						<div class="botomtab_menu">
+							Total : 4 556 6787 FCFA
+						</div>
 					
 				</div>
 				<div class="toptab_bar">
