added wallet up when search bar showing

--- a/views/index.html
+++ b/views/index.html
@@ -69,7 +69,7 @@
 	<a href="/wallet" class="R"></a>
 	<div data---="emoji"></div>
 	<div data---="animation__null__style:5;together:true;">
-	<div data---="splashscreen__null__timeout:5000" class="ui-splashscreen">
+	<div data---="splashscreen__null__timeout:2000" class="ui-splashscreen">
 		<div data---="menu"></div>
         <script type="text/html">
 			<div><i  class="fa fa-comment-dots splash"></i></div>
@@ -301,7 +301,7 @@
 		// Route for goto stories
 		ROUTE('/stories',function(){	
 			active('.fa-circle-notch');
-			title('Stories');
+			title('Status');
 			clear_current();
 			hide_icons();
 
