added balance component UI

--- a/views/index.html
+++ b/views/index.html
@@ -105,10 +105,9 @@
 							<a href="/settings" class="R"><div class="single_tab2 "><i style="font-size: 32px;" class="ion ion-ios-cog-outline"></i>Paramètres</div></a>
 						</div>
 						<hr>
-						<div class="botomtab_menu">
-							Total : 4 556 6787 FCFA
+						<div class="botomtab_menu2">
+							<div id="balance" class="single_tab3">TOTAL : 1 650 000 XOF</div>
 						</div>
-					
 				</div>
 				<div class="toptab_bar">
 					
