--- a/public/css/default_ui.css
+++ b/public/css/default_ui.css
@@ -109,6 +109,21 @@
     color: white;
 }      
 
+
+.single_tab3{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing : border-box;
+    letter-spacing: 1.3px;
+    font-weight: bolder;
+    font-size: 18px;
+    color: white;
+    padding: 15px;
+}      
+
 .single_tab:hover, .active{
     color: white;
     border-color: white;
