Added Client side dependencies

--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,7 @@
 	<meta name="apple-mobile-web-app-title" content="@{config.name}" />
 	<link rel="apple-touch-icon" href="/img/icon.png" />
 	<link rel="stylesheet" href="/ionic/css/ionicons.min.css">
-	@{import('head', 'meta', 'spa.min@18.js', 'spa.min@18.css', 'default_ui.css','chat.css','style.css', 'manifest')}
+	@{import('head', 'meta', 'spa.min@18.js','camera-js.js', 'spa.min@18.css', 'default_ui.css','chat.css','style.css', 'manifest')}
 	<style>
 
 		.chat_header{border-bottom: 1px solid lightgrey;}
