--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,3 +42,19 @@
 }
 
 
+.ion3:hover {
+    font-size: 38px;
+    padding: 1px;
+    border-radius: 100%;
+    opacity: 0.9;
+    color: white;
+}
+
+.ion3 {
+    cursor :pointer;
+    font-size: 35px;
+    padding: 0 ;
+    margin: 0;
+    color: white;
+
+}
