added test controller for community support

--- a/views/index.html
+++ b/views/index.html
@@ -153,6 +153,7 @@
 			<div style="width: 100%;" data---="page__common.page__if:camera;url:/parts/camera.html;reload:camera/reload"></div>
 			<div class="messages_section">
 
+				<div style="width: 100%;" data---="page__common.page__if:chats;url:/parts/messages.html;reload:messages/reload"></div>
 				<div style="width: 100%;" data---="page__common.page__if:chats;url:/parts/chats.html;reload:chats/reload"></div>
 				<div data---="page__common.page__if:groups;url:/parts/groups.html;reload:groups/reload"></div>
 				<div data---="page__common.page__if:stories;url:/parts/stories.html;reload:stories/reload"></div>
@@ -179,7 +180,6 @@
 					<a href="/calls" class="R"><div class="single_tab "><i style="font-size: 40px;" class="ion ion-ios-telephone-outline tab_phone"></i>Appels</div></a>
 				</div>
 		  	</div>
-
 	</div>
 	<script>
 		NAV.clientside('.R');
